add cgdiff utility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ ecm_create_qm_loader(kcachegrind_QM_LOADER kcachegrind_qt)
 add_subdirectory( doc )
 add_subdirectory( libcore )
 add_subdirectory( cgview )
+add_subdirectory( cgdiff )
 add_subdirectory( libviews )
 add_subdirectory( kcachegrind )
 add_subdirectory( qcachegrind )
